# PaperLens

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: TONG_QUAN_DU_AN.md
frontend/: app.py
scripts/: index_papers.py
src/: __init__.py  config.py  utils.py
src/agent/: __init__.py  agent.py  planner.py  prompts.py  tools.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  chat.py  search.py
src/clients/: data_loader.py
src/memory/: __init__.py  belief.py  episodic.py  manager.py  semantic.py  working.py
src/models/: __init__.py  memory.py  paper.py
src/services/: __init__.py  embedding.py  llm.py  vector_store.py
tests/: conftest.py  test_agent.py  test_api.py  test_memory.py  test_models.py  test_services.py
