[project]
name = "paperlens"
version = "0.1.0"
description = "ML Paper Search & Comparison Engine using RAG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tenshi", email = "tenshi@example.com"}
]
keywords = ["rag", "machine-learning", "papers", "search", "comparison"]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Data
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    
    # ML/Embeddings
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    
    # Vector DB
    "qdrant-client>=1.6.0",
    
    # LLM
    "litellm>=1.0.0",
    "groq>=0.4.0",
    
    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    
    # Frontend
    "streamlit>=1.28.0",
    
    # Utilities
    "tenacity>=8.2.0",
    "structlog>=23.1.0",
    "rich>=13.0.0",

    # Agent & Memory
    "aiosqlite>=0.19.0",      # Async SQLite for memory
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["paperlens"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
